Fix overflow on form media querry

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -775,7 +775,7 @@
     .emailInput input,
     .subjectInput input,
     .messageInput textarea{
-      width: 270px;
+      width: 230px;
     }
 }
 
